--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -453,6 +453,16 @@
   address =      {Boca Raton, FL}
 }
 
+@ARTICLE{marjoram:2003:abc,
+  TITLE   =      {Markov chain Monte Carlo without likelihoods},
+  AUTHOR  =      {Marjoram, P and Molitor, J and Plagnol, V and Tavar\'{e}, S},
+  JOURNAL =      {Proceedings of teh National Academy of Sciences of the United States of America},
+  YEAR    =      {2003},
+  volume  =      {100},
+  number  =      {26},
+  pages   =      {15324--15328}
+}
+
 @MANUAL{martin:2013:MCP,
   title  = {{MCMCpack}: {M}arkov Chain {M}onte {C}arlo {(MCMC)} Package},
   author = {Martin, A D and Quinn, K M and Park, J H},
