--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -161,6 +161,15 @@
   pages =        {443--460},
 }
 
+@ARTICLE{duane:1987:hmc,
+  AUTHOR  =      {Duane, S and Kennedy, A D and Pendleton, B J and Roweth, D},
+  TITLE   =      {Higher order hybrid Monte Carlo algorithms},
+  YEAR    =      {1987},
+  JOURNAL =      {Physics Letters B},
+  volume  =      {195},
+  pages   =      {216--222}
+}
+
 @ARTICLE{elston:1962:ETR,
   author =       {Elston, R C and Grizzle, J E},
   title =        {Estimation of time-response curves and their confidence bounds},
