Incorporate MALA sampler.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -310,7 +310,7 @@
 
 @ARTICLE{girolami:2011:RMHMC,
   AUTHOR  =      {Girolami, M and Calderhead, B},
-  TITLE   =      {Riemann manifold Langevin and Hamiltonian Monte Carlo methods},
+  TITLE   =      {{R}iemann manifold {L}angevin and {H}amiltonian {M}onte {C}arlo methods},
   JOURNAL =      {Journal of the Royal Statistical Society: Series B},
   YEAR    =      {2011},
   volume  =      {73},
@@ -622,7 +622,7 @@
 
 @ARTICLE{roberts:1996:MALA,
   AUTHOR  =      {Roberts, G O and Tweedie, R L},
-  TITLE   =      {Exponential Convergence of Langevin Distributions and Their Discrete Approximations},
+  TITLE   =      {Exponential convergence of {L}angevin distributions and their discrete approximations},
   JOURNAL =      {Bernoulli},
   YEAR    =      {1996},
   volume  =      {2},
@@ -632,7 +632,7 @@
 
 @ARTICLE{roberts:2002:LD,
   AUTHOR  =      {Roberts, G O and Stramer, O},
-  TITLE   =      {Langevin Diffusions and Metropolis-Hastings Algorithms},
+  TITLE   =      {{L}angevin diffusions and {M}etropolis-{H}astings algorithms},
   JOURNAL =      {Methodology and Computing in Applied Probability},
   YEAR    =      {2002},
   volume  =      {4},
