Incorporate BHMC and BMG samplers.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -537,7 +537,7 @@
 }
 
 @incollection{pakman:2013:hmcb,
-  title     = {Auxiliary-variable Exact Hamiltonian Monte Carlo Samplers for Binary Distributions},
+  title     = {Auxiliary-variable exact {H}amiltonian {M}onte {C}arlo samplers for binary distributions},
   url       = {http://media.nips.cc/nipsbooks/nipspapers/paper_files/nips26/1176.pdf},
   booktitle = {Advances in Neural Information Processing Systems 26},
   author    = {Ari Pakman and Liam Paninski},
@@ -680,7 +680,7 @@
 
 @phdthesis{schafer:2012:DIS,
   AUTHOR =       {Christian Andr\'{e} Sch\"{a}fer},
-  TITLE  =       {Monte Carlo Methods for Sampling High-Dimensional Binary Vectors},
+  TITLE  =       {{M}onte {C}arlo Methods for Sampling High-Dimensional Binary Vectors},
   SCHOOL =       {Universit\'{e} Paris-Dauphine},
   year   =       {2012}
 }
