Add Reference to Bayesian Variable Selection Review
Gibbs Sampling for sigma2

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -528,6 +528,16 @@
   note =         {[Online; accessed 5-March-2014]},
 }
 
+@ARTICLE{ohara:2009:BVS,
+  AUTHOR =       {O'Hara, R B and Sillanp{\"a}{\"a}, M J},
+  TITLE =        {A review of Bayesian variable selection methods: what, how and which},
+  JOURNAL =      {Bayesian Analysis},
+  YEAR =         {2009},
+  volume =       {4},
+  number =       {1},
+  pages =        {85--117}
+}
+
 @MANUAL{openbugs:2014:ex,
   title  = {OpenBUGS Examples},
   author = {OpenBUGS Project Management Group},
@@ -540,7 +550,7 @@
   title     = {Auxiliary-variable exact {H}amiltonian {M}onte {C}arlo samplers for binary distributions},
   url       = {http://media.nips.cc/nipsbooks/nipspapers/paper_files/nips26/1176.pdf},
   booktitle = {Advances in Neural Information Processing Systems 26},
-  author    = {Ari Pakman and Liam Paninski},
+  author    = {Pakman, A and Paninski, L},
   editor    = {C.j.c. Burges and L. Bottou and M. Welling and Z. Ghahramani and K.q. Weinberger},
   year      = {2013},
   pages     = {2409--2498}
@@ -679,14 +689,14 @@
 }
 
 @phdthesis{schafer:2012:DIS,
-  AUTHOR =       {Christian Andr\'{e} Sch\"{a}fer},
+  AUTHOR =       {Sch\"{a}fer, C A},
   TITLE  =       {{M}onte {C}arlo Methods for Sampling High-Dimensional Binary Vectors},
   SCHOOL =       {Universit\'{e} Paris-Dauphine},
   year   =       {2012}
 }
 
 @ARTICLE{schafer:2013:SMCB,
-  AUTHOR  =      {Christian Andr\'{e} Sch\"{a}fer and Nicolas Chopin},
+  AUTHOR  =      {Sch\"{a}fer, C A and Chopin, N},
   TITLE   =      {Sequential {M}onte {C}arlo on large binary sampling spaces},
   JOURNAL =      {Statistics and Computing},
   YEAR    =      {2013},
