Incorporate HMC sampler.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -163,7 +163,7 @@
 
 @ARTICLE{duane:1987:hmc,
   AUTHOR  =      {Duane, S and Kennedy, A D and Pendleton, B J and Roweth, D},
-  TITLE   =      {Higher order hybrid Monte Carlo algorithms},
+  TITLE   =      {Higher order hybrid {M}onte {C}arlo algorithms},
   YEAR    =      {1987},
   JOURNAL =      {Physics Letters B},
   volume  =      {195},
