Un-metropolize BMG

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -161,6 +161,15 @@
   pages =        {443--460},
 }
 
+@ARTICLE{dellaportas:2002:GVS,
+  author     =   {Dellaportas, P and Forster, J J and Ntzoufras, I},
+  title      =   {On Bayesian model and variable selection using {MCMC}},
+  year       =   {2002},
+  journal    =   {Statistics and Computing},
+  volume     =   {12},
+  pages      =   {27--36}
+}
+
 @ARTICLE{elston:1962:ETR,
   author =       {Elston, R C and Grizzle, J E},
   title =        {Estimation of time-response curves and their confidence bounds},
