--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -463,6 +463,16 @@
   address =      {Boca Raton, FL}
 }
 
+@ARTICLE{madigan:1995:MC3,
+  AUTHOR  =      {Madigan, D and York, J and Allard, D},
+  TITLE   =      {Bayesian Graphical Models for Discrete Data},
+  JOURNAL =      {Revue Internationale de Statistique},
+  YEAR    =      {1995},
+  volume  =      {63},
+  number  =      {2},
+  pages   =      {215--232}
+}
+
 @MANUAL{martin:2013:MCP,
   title  = {{MCMCpack}: {M}arkov Chain {M}onte {C}arlo {(MCMC)} Package},
   author = {Martin, A D and Quinn, K M and Park, J H},
