--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -472,6 +472,16 @@
   address =      {Boca Raton, FL}
 }
 
+@ARTICLE{marjoram:2003:abc,
+  TITLE   =      {{M}arkov chain {M}onte {C}arlo without likelihoods},
+  AUTHOR  =      {Marjoram, P and Molitor, J and Plagnol, V and Tavar\'{e}, S},
+  JOURNAL =      {Proceedings of the National Academy of Sciences of the United States of America},
+  YEAR    =      {2003},
+  volume  =      {100},
+  number  =      {26},
+  pages   =      {15324--15328}
+}
+
 @MANUAL{martin:2013:MCP,
   title  = {{MCMCpack}: {M}arkov Chain {M}onte {C}arlo {(MCMC)} Package},
   author = {Martin, A D and Quinn, K M and Park, J H},
@@ -712,6 +722,16 @@
   volume  =      {23},
   number  =      {2},
   pages   =      {163-184}
+}
+
+@INBOOK{sisson:2011:ABC,
+  AUTHOR =       {Sisson, S A and Fan, Y},
+  editor =       {Brooks, Steve and Gelman, Andrew and Jones, Galin L and Meng, Xiao-Li},
+  TITLE =        {Handbook of Markov Chain Monte Carlo},
+  CHAPTER =      {Likelihood-Free MCMC},
+  pages =        {313--335},
+  PUBLISHER =    {CRC Press},
+  YEAR =         {2011},
 }
 
 @ARTICLE{smith:2007:BOA,
