--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -454,6 +454,16 @@
   pages =        {1--44},
 }
 
+@ARTICLE{liu:1996:MMG,
+  AUTHOR =       {Liu, J S},
+  TITLE =        {{P}eskun's {T}heorem and a modified discrete-state {G}ibbs sampler},
+  JOURNAL =      {Biometrika},
+  YEAR =         {1996},
+  volume =       {83},
+  number =       {3},
+  pages =        {681--682},
+}
+
 @ARTICLE{lunn:2009:BUGS,
   AUTHOR =       {Lunn, D and Spiegelhalter, D and Thomas, A and Best, N},
   TITLE =        {The {BUGS} project: Evolution, critique and future directions},
@@ -470,6 +480,16 @@
   YEAR =         {2012},
   PUBLISHER =    {Chapman \& Hall/CRC},
   address =      {Boca Raton, FL}
+}
+
+@ARTICLE{madigan:1995:MC3,
+  AUTHOR  =      {Madigan, D and York, J and Allard, D},
+  TITLE   =      {{B}ayesian graphical models for discrete data},
+  JOURNAL =      {Revue Internationale de Statistique},
+  YEAR    =      {1995},
+  volume  =      {63},
+  number  =      {2},
+  pages   =      {215--232}
 }
 
 @MANUAL{martin:2013:MCP,
