GK distribution example and 3 modes for ABC tolerance tuning

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -1,3 +1,13 @@
+@ARTICLE{allingham:2009:ABCGK,
+  AUTHOR =       {Allingham, D and King, RA and Mengersen, KL},
+  TITLE =        {Bayesian estimation of quantile distributions},
+  JOURNAL =      {Statistics and Computing},
+  YEAR =         {2009},
+  volume =       {19},
+  number =       {2},
+  pages =        {189--201}
+}
+
 @ARTICLE{bezanson:2012:JFD,
   AUTHOR =       {Bezanson, J and Karpinski, S and Shah, V B and Edelman, A},
   TITLE =        {Julia: a fast dynamic language for technical computing},
@@ -661,6 +671,16 @@
   YEAR =         {1992},
   volume =       {4},
   address =      {New York}
+}
+
+@ARTICLE{rayner:2002:GK,
+  AUTHOR  =      {Rayner, GD and MacGillivray, HL},
+  TITLE   =      {Numerical maximum likelihood estimation for the g-and-k and generalized g-and-h distributions},
+  JOURNAL =      {Statistics and Computing},
+  YEAR    =      {2002},
+  volume  =      {12},
+  number  =      {1},
+  pages   =      {57--75}
 }
 
 @BOOK{roche:1975:SM,
