Make BMC3 adaptive

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -446,6 +446,15 @@
   address =      {New York},
 }
 
+@ARTICLE{lamnisos:2013:AMC3,
+  author  = {Lamnisos, D and Griffin, J E and Steel, M F J},
+  title   = {Adaptive MC\textsuperscript{3} and Gibbs Algorithms for
+             Bayesian Model Averaging in Linear Regression Models},
+  journal = {arXiv:1306.6028 [stat.CO]},
+  year    = {2013},
+  url     = {http://arxiv.org/abs/1306.6028}
+}
+
 @MANUAL{lin:2014:SBP,
   title  = {StatsBase},
   author = {Lin, D and Byrne, S and Jensen, A N and Bates, D and White, J M and
