Individual Adaptation Sampler

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -355,6 +355,14 @@
   pages =        {283--288},
 }
 
+@ARTICLE{griffin:2014:IAS,
+  AUTHOR =       {Griffin, J E and \L{}atuszy\'{n}ski, K and Steel, M F J},
+  TITLE =        {Individual Adaptation: an adaptive MCMC scheme for variable selection problems},
+  JOURNAL =      {arXiv:1412.6760v2 [stat.CO]},
+  YEAR =         {2014},
+  url =          {http://arxiv.org/abs/1412.6760v2},
+}
+
 @ARTICLE{haario:2001:AMA,
   AUTHOR =       {Haario, H and Saksman, E and Tamminen, J},
   TITLE =        {An adaptive {M}etropolis algorithm},
