Incorporate Binary Individual Adaptation sampler.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -355,7 +355,7 @@
   pages =        {283--288},
 }
 
-@ARTICLE{griffin:2014:IAS,
+@ARTICLE{griffin:2014:BIA,
   AUTHOR =       {Griffin, J E and \L{}atuszy\'{n}ski, K and Steel, M F J},
   TITLE =        {Individual Adaptation: an adaptive MCMC scheme for variable selection problems},
   JOURNAL =      {arXiv:1412.6760v2 [stat.CO]},
