Replace Graphs package dependency with LightGraphs.

--- a/doc/xrefs.bib
+++ b/doc/xrefs.bib
@@ -69,6 +69,14 @@
   pages =        {9--25}
 }
 
+@MANUAL{bromberger:2016:LGP,
+  title  = {LightGraphs},
+  author = {Bromberger, S and {other contributors}},
+  year   = {2016},
+  note   = {julia software package},
+  url    = {https://github.com/JuliaGraphs/LightGraphs.jl},
+}
+
 @ARTICLE{brooks:1998:GMM,
   AUTHOR =       {Brooks, S and Gelman, A},
   TITLE =        {General Methods for Monitoring Convergence of Iterative
@@ -904,12 +912,4 @@
   year   = {2014},
   note   = {julia software package},
   url    = {https://github.com/johnmyleswhite/Calculus.jl},
-}
-
-@MANUAL{white:2014:GP,
-  title  = {Graphs},
-  author = {White, J M and {other contributors}},
-  year   = {2014},
-  note   = {julia software package},
-  url    = {https://github.com/JuliaLang/Graphs.jl},
 }
